Added get functions for user + JWT based authorization
