# app/src/main/java/ch/heigvd/amt/projectTwo/entities/StadiumEntity.java
@@ -1,58 +1,27 @@
 package ch.heigvd.amt.projectTwo.entities;
 
+import lombok.Data;
+
 import javax.persistence.*;
 import java.io.Serializable;
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.List;
 
-//TODO: Add lombok
+@Data
 @Entity
+@Table(name= "stadium")
 public class StadiumEntity implements Serializable {
     @Id
-    private int Id;
-
-    public BigDecimal getId() {
-        return BigDecimal.valueOf(Id);
-    }
-
-    public void setId(int id) {
-        Id = id;
-    }
-
-    public String getLocation() {
-        return location;
-    }
-
-    public void setLocation(String location) {
-        this.location = location;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public BigDecimal getNumberOfPlaces() {
-        return BigDecimal.valueOf(numberOfPlaces);
-    }
-
-    public void setNumberOfPlaces(int numberOfPlaces) {
-        this.numberOfPlaces = numberOfPlaces;
-    }
-
+    @Column(name = "id_stadium")
+    private Integer Id;
     private String location;
     private String name;
+    @Column(name = "places")
     private int numberOfPlaces;
-
-    public int getUserId() {
-        return userId;
-    }
-
-    public void setUserId(int userId) {
-        this.userId = userId;
-    }
-
+    @Column(name = "FK_user")
     private int userId;
+
+    @OneToMany(mappedBy = "location", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<MatchEntity> matches = new ArrayList<>();
 }
